[package]
name = "orjailrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capctl = "0.2.0"
clap = { version = "4.4", features = ["derive", "wrap_help", "color"] }
cgroups-rs = "0.2.6"
structopt = "0.3.23"
log = "0.4.14"
env_logger = "0.9.0"
libc = "0.2.102"
nix = "0.22.1"
rand = "0.8.5"
rlimit = "0.6.2"
scan_fmt = "0.2.6"
syscallz = "0.16.1"
rustix = { version = "0.38.34", features = [ "fs", "mount"]}
rtnetlink = "0.14.1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.59"
futures = "0.3.30"
# which = "6.0.1"
